--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
           alert("Please fill out all fields: Student Name, Department, and Registration Number.");
           return false; // Prevent form submission
         }
-        return true; // Allow form submission
+        return true; 
       }
     </script>
   </head>
@@ -51,15 +51,15 @@
       <form action="/" method="POST" onsubmit="return validateForm()">
         <div class="mb-3">
           <label for="title" class="form-label">Student Name</label>
-          <input type="text" class="form-control" name="title" id="title">
+          <input type="text" class="form-control form-control-md" name="title" id="title">
         </div>
         <div class="mb-3">
           <label for="desc" class="form-label">Department</label>
-          <input type="text" class="form-control" name="desc" id="desc">
+          <input type="text" class="form-control form-control-md" name="desc" id="desc">
         </div>
         <div class="mb-3">
           <label for="reg_no" class="form-label">Registration Number</label>
-          <input type="text" class="form-control" name="reg_no" id="reg_no">
+          <input type="text" class="form-control form-control-md" name="reg_no" id="reg_no">
         </div>
         <button type="submit" class="btn btn-primary">Add Student</button>
       </form>
@@ -107,6 +107,6 @@
       </table>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>-->
   </body>
 </html>
